--- a/basic-html.html
+++ b/basic-html.html
@@ -4,7 +4,7 @@
 
     <head>
         <metal charset="utf-8">
-        <title>Title here</title>title>
+        <title>Title here</title>
     </head>
 
     <body>
