--- a/basic-html.html
+++ b/basic-html.html
@@ -2,14 +2,28 @@
 
 <html lang="en">
 
-    <head>
-        <metal charset="utf-8">
-        <title>Title here</title>
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Title here</title>
+ </head>
 
-    <body>
+<body>
     <h1>Header</h1>
     <p>Content Goes Here</p>
-    </body>
+
+    <h1>Links</h1>
+<p>
+    <a href="https://www.google.com">Google</a>
+</p>
+<p>
+    <!-- External Link -->
+    This links goes to <a href="https://amazon.com">Amazon</a>.
+     <!-- Relative Link -->
+   <a href="../../brookealtman-bio.html">Brooke Altman Bio</a> 
+</p>
+
+
+</body>
+
 
 </html>
