--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -12,6 +12,9 @@
     <p>Brooke Altman</p>
     <p>336 Comstock Avenue Syracuse NY, 13210</p>
     <p>
+        <a href="mailto:bsaltman@syr.edu">Brooke Altman Email</a>
+    </p>
+    <p>
         <a href="https://www.linkedin.com/in/brookealtman3/">My LinkedIn Profile</a>
     </p>
 
