--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -16,6 +16,7 @@
     </p>
     <p>
         <a href="https://www.linkedin.com/in/brookealtman3/">My LinkedIn Profile</a>
+        <img src="../images/LI-Logo.png" alt="LinkedIn Logo">
     </p>
 
     <h1>Links</h1>
