--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -16,7 +16,8 @@
     </p>
     <p>
         <a href="https://www.linkedin.com/in/brookealtman3/">My LinkedIn Profile</a>
-        <img src="../images/LI-Logo.png" alt="LinkedIn Logo">
+        <img src="../images/LI-Logo.png" alt="LinkedIn Logo"></a>
+        <iframe src="../images/LI-Logo.png" title="My LinkedIn Page"></iframe>
     </p>
 
 
