--- a/basic-html.html
+++ b/basic-html.html
@@ -24,6 +24,21 @@
 
 
 </body>
+    <h1>Tables</h1>
+    <table>
+        <caption>Population</caption>
+        <tr>
+            <th>Country</th>
+            <th>Population</th>
+            <th>% of World Population</th>
+        </tr>
+        <tr>
+            <td>China</td>
+            <td>15000</td>
+            <td>25%</td>
+        </tr>
+    </table>
 
+ <body>
 
 </html>
