--- a/basic-html.html
+++ b/basic-html.html
@@ -38,6 +38,10 @@
             <td>25%</td>
         </tr>
     </table>
+    <h1>Forms</h1>
+    <form action="" method="">
+        <input type="text" id="fname" name="fname">
+    </form>
 
  <body>
 
