--- a/basic-html.html
+++ b/basic-html.html
@@ -40,7 +40,9 @@
     </table>
     <h1>Forms</h1>
     <form action="" method="">
+        <label for="fname">First name: </label>
         <input type="text" id="fname" name="fname">
+        
     </form>
 
  <body>
