--- a/basic-html.html
+++ b/basic-html.html
@@ -40,9 +40,9 @@
     </table>
     <h1>Forms</h1>
     <form action="" method="">
-        <label for="fname">First name: </label>
+        <label for="fname">First name: </label><br>
         <input type="text" id="fname" name="fname">
-        
+
     </form>
 
  <body>
