--- a/basic-html.html
+++ b/basic-html.html
@@ -41,7 +41,10 @@
     <h1>Forms</h1>
     <form action="" method="">
         <label for="fname">First name: </label><br>
-        <input type="text" id="fname" name="fname">
+        <input type="text" id="fname" name="fname"><br>
+        <br>
+        <label for="comments"> Comments: </label><br>
+        <textarea id="comment" name="comments">Brooke Altman</textarea>
 
     </form>
 
