--- a/basic-html.html
+++ b/basic-html.html
@@ -44,7 +44,10 @@
         <input type="text" id="fname" name="fname"><br>
         <br>
         <label for="comments"> Comments: </label><br>
-        <textarea id="comment" name="comments">Brooke Altman</textarea>
+        <textarea id="comment" name="comments" row="6">Brooke Altman</textarea>
+
+        <br><br>
+        <input type="submit" value="send form">
 
     </form>
 
