--- a/basic-html.html
+++ b/basic-html.html
@@ -46,6 +46,8 @@
         <label for="comments"> Comments: </label><br>
         <textarea id="comment" name="comments" row="6">Brooke Altman</textarea>
 
+        <p>Please select your age.</p>
+        
         <br><br>
         <input type="submit" value="send form">
 
