--- a/basic-html.html
+++ b/basic-html.html
@@ -47,7 +47,9 @@
         <textarea id="comment" name="comments" row="6">Brooke Altman</textarea>
 
         <p>Please select your age.</p>
-        
+        <input type="radio" id="age1" name="age" value="30">
+        <label for="age1">0-30</label>
+
         <br><br>
         <input type="submit" value="send form">
 
