--- a/basic-html.html
+++ b/basic-html.html
@@ -49,6 +49,9 @@
         <p>Please select your age.</p>
         <input type="radio" id="age1" name="age" value="30">
         <label for="age1">0-30</label>
+         <input type="radio" id="age2" name="age" value="60">
+        <label for="age2">31-60</label>
+
 
         <br><br>
         <input type="submit" value="send form">
