--- a/basic-html.html
+++ b/basic-html.html
@@ -51,6 +51,9 @@
         <label for="age1">0-30</label>
          <input type="radio" id="age2" name="age" value="60">
         <label for="age2">31-60</label>
+         <input type="radio" id="age3" name="age" value="100">
+        <label for="age3">61-100</label>
+
 
 
         <br><br>
