--- a/basic-html.html
+++ b/basic-html.html
@@ -54,6 +54,15 @@
          <input type="radio" id="age3" name="age" value="100">
         <label for="age3">61-100</label>
 
+        <p>What type of vehicle do you have?</p>
+
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Car">
+        <label for="vehicle1">I have a car</label>
+        <input type="checkbox" id="vehicle2" name="vehicle2" value="Bike">
+        <label for="vehicle2">I have a bike</label>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3">I have a boat</label>
+
 
 
         <br><br>
