--- a/basic-html.html
+++ b/basic-html.html
@@ -62,7 +62,14 @@
         <label for="vehicle2">I have a bike</label>
         <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
         <label for="vehicle3">I have a boat</label>
-
+        <br><br>
+        <label for="cars">Choose your car</label><br>
+        <select>
+            <option value="volvo">Volvo</option>
+             <option value="saab">Saab</option>
+              <option value="opel">Opel</option>
+               <option value="audi">Audi</option>
+        </select>
 
 
         <br><br>
