--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -24,6 +24,16 @@
             <td>15000</td>
             <td>25%</td>
         </tr>
+         <tr>
+            <td>China</td>
+            <td>15000</td>
+            <td>25%</td>
+        </tr>
+         <tr>
+            <td>China</td>
+            <td>15000</td>
+            <td>25%</td>
+        </tr>
     </table>
 
 
