--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -17,17 +17,17 @@
         <tr>
             <th>High End Product</th>
             <th>Dupe Product</th>
-            <th>Rating of Efficiency</th>
+            <th>Price of Dupe</th>
         </tr>
         <tr>
-            <td>China</td>
-            <td>15000</td>
-            <td>25%</td>
+            <td>Drunk Elephant Bronzing Drops</td>
+            <td>e.l.f Bronzing Drops</td>
+            <td>$6.00 USD</td>
         </tr>
          <tr>
-            <td>China</td>
-            <td>15000</td>
-            <td>25%</td>
+            <td>Tarte Shape Tape Concealer</td>
+            <td>e.l.f Hydrating Camo Concealer</td>
+            <td>$8.00 USD</td>
         </tr>
          <tr>
             <td>China</td>
