--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -30,10 +30,46 @@
             <td>$8.00 USD</td>
         </tr>
          <tr>
-            <td>China</td>
-            <td>15000</td>
-            <td>25%</td>
+            <td>Charlotte Tilbury Magic Cream</td>
+            <td>Revolution Pro Miracle Cream</td>
+            <td>$14.00 USD</td>
         </tr>
+        <tr>
+            <td>Laneige Glowy Hydration Balm</td>
+            <td>Nivea Glow Lip Care</td>
+            <td>$4.29 USD</td>
+        </tr>
+        <tr>
+            <td>Refy Lash Sculpt Mascara</td>
+            <td>Loreal Telescopic Mascara</td>
+            <td>$11.99 USD</td>
+        </tr>
+        <tr>
+            <td>Charlotte Tilbury Hollywood Flawless Filter</td>
+            <td>e.l.f Halo Glow</td>
+            <td>$15.00 USD</td>
+        </tr>
+        <tr>
+            <td>Youth To The People Facial Cleanser</td>
+            <td>CeraVe Hydrating Cleanser</td>
+            <td>$11.00 USD</td>
+        </tr>
+        <tr>
+            <td>Supergood Unseen Sunscreen</td>
+            <td>e.l.f Suntouchable Suncreen</td>
+            <td>$15.00 USD</td>
+        </tr>
+        <tr>
+            <td>Dyson Airwrap</td>
+            <td>Shark FlexStyle Airwrap</td>
+            <td>$197. USD</td>
+        </tr>
+        <tr>
+            <td>Haus Labs Contour Stick</td>
+            <td>NYX Contour Stick</td>
+            <td>$13.99 USD</td>
+        </tr>
+
     </table>
 
 
