--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -22,7 +22,7 @@
     </p>
 
 <h1>Forms</h1>
-    <form action="https://formspree.io/f/xkgvlkez" method="">
+    <form action="https://formspree.io/f/xkgvlkez" method="POST">
         <label for="fname">First name: </label><br>
         <input type="text" id="fname" name="fname"><br>
         <br>
