--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -27,7 +27,7 @@
         <input type="text" id="fname" name="fname"><br>
         <br>
         <label for="comments"> Comments: </label><br>
-        <textarea id="comment" name="comments" row="6">Brooke Altman</textarea>
+        <textarea id="comment" name="comments" row="6"></textarea>
 
         <p>Please select your age.</p>
         <input type="radio" id="age1" name="age" value="30">
