--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -26,8 +26,8 @@
         <label for="fname">First name: </label><br>
         <input type="text" id="fname" name="fname"><br>
         <br>
-        <label for="comments"> Comments: </label><br>
-        <textarea id="comment" name="comments" row="6"></textarea>
+        <label for="comments">Comments: </label><br>
+        <textarea id="comment" name="comments">Brooke Altman</textarea>
 
         <p>Please select your age.</p>
         <input type="radio" id="age1" name="age" value="30">
