--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -26,7 +26,7 @@
         <label for="fname">First name: </label><br>
         <input type="text" id="fname" name="fname"><br>
         <br>
-        <label for="comments">Comments: </label><br>
+        <label for="comment">Comments: </label><br>
         <textarea id="comment" name="comments">Brooke Altman</textarea>
 
         <p>Please select your age.</p>
