--- a/participation-5.html
+++ b/participation-5.html
@@ -11,7 +11,7 @@
     
     <ol>
         <li>Oranges</li>
-        <li><strong>Apples</strong></li>
+        <strong><li>Apples</li></strong>
         <li>Bananas</li>
     </ol>
 </body>
