--- a/week6-classwork.html
+++ b/week6-classwork.html
@@ -17,7 +17,8 @@
 
 <body>
     <h1>Header 1</h1>
-    <p>Content Goes Here</p>
+    <p id="dave">Content goes here</p>
+    <p id="fred">Content goes here</p>
 </body>
 
 </html>
