--- a/week6-classwork.html
+++ b/week6-classwork.html
@@ -12,6 +12,9 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 3em;
         }
+        #dave {
+            font-size: 0.5em;
+        }
     </style>
  </head>
 
