--- a/week6-classwork.html
+++ b/week6-classwork.html
@@ -15,6 +15,9 @@
         #dave {
             font-size: 0.5em;
         }
+        .purple {
+            color: purple;
+        }
     </style>
  </head>
 
