--- a/week6-classwork.html
+++ b/week6-classwork.html
@@ -22,8 +22,8 @@
  </head>
 
 <body>
-    <h1>Header 1</h1>
-    <p id="dave">Content goes here</p>
+    <h1 class="purple">Header 1</h1>
+    <p id="dave" class="purple">Content goes here</p>
     <p id="fred">Content goes here</p>
 </body>
 
