--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="utf-8">
     <title>Week 7 CSS Colors</title>
-    
+    <style> 
+      h1 {color:#852985;}
+    </style>
  </head>
 
  <body>
