--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -7,13 +7,14 @@
     <title>Week 7 CSS Colors</title>
     <style> 
       h1 {color:#852985;}
+      a:hover {color: #d2601e;}
     </style>
  </head>
 
  <body>
     <h1>CSS Hex Colors</h1>
     <p>Paragraph <a href="https://syr.edu">one</a></p>
-    <p>Paragraph two</p>
+    <p>Paragraph <a href="https://cazenovia.edu">two</a></p>
  </body>
 
  </html>
