--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -8,6 +8,7 @@
     <style> 
       h1 {color:#852985;}
       a:hover {color: #d2601e;}
+      a:visited {color: #e6ed09}
     </style>
  </head>
 
