--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -6,9 +6,13 @@
     <meta charset="utf-8">
     <title>Week 7 CSS Colors</title>
     <style> 
-      h1 {color:#852985;}
+      h1 {
+         color:#852985;
+         background-color: #000000;
+      }
       a:hover {color: #d2601e;}
       a:visited {color: #e6ed09}
+      body {background-color: #852985;}
     </style>
  </head>
 
