--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -12,7 +12,7 @@
       }
       a:hover {color: #d2601e;}
       a:visited {color: #e6ed09}
-      body {background-color: #852985;}
+      body {background-color: #f0b9f0;}
     </style>
  </head>
 
