--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -13,12 +13,13 @@
       a:hover {color: #d2601e;}
       a:visited {color: #e6ed09}
       body {background-color: #f0b9f0;}
+      .first {background-image: url("images/New-LI-Logo.png");}
     </style>
  </head>
 
  <body>
     <h1>CSS Hex Colors</h1>
-    <p>Paragraph <a href="https://syr.edu">one</a></p>
+    <p class="first">Paragraph <a href="https://syr.edu">one</a></p>
     <p>Paragraph <a href="https://cazenovia.edu">two</a></p>
  </body>
 
