--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -9,6 +9,7 @@
       h1 {
          color:#852985;
          background-color: #000000;
+         padding: 1em;
       }
       a:hover {color: #d2601e;}
       a:visited {color: #e6ed09}
