--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -9,7 +9,7 @@
       h1 {
          color:#852985;
          background-color: #000000;
-         padding: 1em;
+         padding: 1em 0em 1em 0em;
       }
       a:hover {color: #d2601e;}
       a:visited {color: #e6ed09}
