--- a/week7-classwork.html
+++ b/week7-classwork.html
@@ -11,7 +11,7 @@
          background-color: #000000;
          padding: 1em 0em 1em 0em;
          margin: 1em;
-         border {2px solid #ffffff;}
+         border {2px solid #FFFFFF;}
       }
       a:hover {color: #d2601e;}
       a:visited {color: #e6ed09}
