--- a/lab07/index.html
+++ b/lab07/index.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+        <nav>
+            <a href="index.html">Home</a> | 
+            <a href="skills.html">Skills</a> | 
+            <a href="contact.html">Contact</a>
+        </nav>
 
 
         <h1>Brooke Altman's Biography</h1>
