--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -9,6 +9,11 @@
  </head>
 
 <body>
+    <nav>
+        <a href="index.html">Home</a> | 
+        <a href="skills.html">Skills</a> | 
+        <a href="contact.html">Contact</a>
+    </nav>
     <h1>Contact</h1>
     <p>Brooke Altman</p>
     <p>336 Comstock Avenue Syracuse NY, 13210</p>
