--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -12,6 +12,11 @@
  </head>
 
 <body>
+    <nav>
+    <a href="index.html">Home</a> | 
+    <a href="skills.html">Skills</a> | 
+    <a href="contact.html">Contact</a>
+    </nav>
     <h1>Tables</h1>
     <table>
         <caption>Skills</caption>
