--- a/duke_layout.html
+++ b/duke_layout.html
@@ -9,7 +9,7 @@
        </style>
     </head>
     <body><div class="outer-container">
-        <div class="left"></div>
+        <div class="left">
         <h2>Up Next</h2>
 
         <p>Effective March 10, 2020, all Duke-sponsored events over 50 people have been cancelled, rescheduled, postponed or virtualized. Please check with the event sponsor regarding event status.</p>
@@ -36,7 +36,7 @@
         </p>
         <div>More Events at Duke</div>
 </div>
-
+</div>
 <div class="right">
         <h2>Resources</h2>
 
