--- a/duke_layout.html
+++ b/duke_layout.html
@@ -6,6 +6,7 @@
         <style>
             body {font-family: "Open Sans",Roboto,"Helvetica Neue",Helvetica,sans-serif;}
             .outer-container {display: flex;}
+            .row1, .row2 {display: flex;}
        </style>
     </head>
     <body><div class="outer-container">
@@ -35,7 +36,6 @@
             Away/Neutral Site Game, See Description
         </p>
         <div>More Events at Duke</div>
-</div>
 </div>
 <div class="right">
         <h2>Resources</h2>
