--- a/duke_layout.html
+++ b/duke_layout.html
@@ -42,8 +42,8 @@
 
         <div class="row1">
 
-        Duke Student Assistance Fund<br>
-        <img src="https://duke.edu/assets/img/resized/student-assistance.jpg" alt="Duke Allen Building">
+        <div>Duke Student Assistance Fund<br>
+        <img src="https://duke.edu/assets/img/resized/student-assistance.jpg" alt="Duke Allen Building"></div>
 
         Duke Scholarship and Engagement on COVID-19<br>
         <img src="https://duke.edu/assets/img/resized/scholarship.jpg" alt="Dr. Barton Haynes">
