--- a/duke_layout.html
+++ b/duke_layout.html
@@ -45,15 +45,15 @@
         <div>Duke Student Assistance Fund<br>
         <img src="https://duke.edu/assets/img/resized/student-assistance.jpg" alt="Duke Allen Building"></div>
 
-        Duke Scholarship and Engagement on COVID-19<br>
-        <img src="https://duke.edu/assets/img/resized/scholarship.jpg" alt="Dr. Barton Haynes">
+        <div>Duke Scholarship and Engagement on COVID-19<br>
+        <img src="https://duke.edu/assets/img/resized/scholarship.jpg" alt="Dr. Barton Haynes"></div>
         
-        Anti-Racism at Duke<br>
-        <img src="https://duke.edu/assets/img/resized/anti-racism-tile.jpg" alt="close up of chappel">
+        <div>Anti-Racism at Duke<br>
+        <img src="https://duke.edu/assets/img/resized/anti-racism-tile.jpg" alt="close up of chappel"></div>
         </div>
         <div class="row2">
-        Keep Learning<br>
-        <img src="https://duke.edu/assets/img/resized/keep-learning.jpg" alt="Lilly Library">
+        <div>Keep Learning<br>
+        <img src="https://duke.edu/assets/img/resized/keep-learning.jpg" alt="Lilly Library"></div>
         
         Flexible Teaching<br>
         <img src="https://duke.edu/assets/img/resized/keep-teaching.jpg" alt="Allen Building Entry">
