--- a/lab07/index.html
+++ b/lab07/index.html
@@ -38,7 +38,7 @@
         <li>Watching movies</li>
     </ul>
 
-      <img src="../images/BrookeAltman-image.png" alt="Brooke Altman Image">
+      <img src="../images/bio-banner.png" alt="Brooke Altman Image">
 
     </body>
 
