--- a/lab08/index.html
+++ b/lab08/index.html
@@ -5,6 +5,16 @@
         <meta charset="utf-8">
         <title>Brooke Altman Bio</title>
         <link rel="stylesheet" href="styles.css">
+        <style>
+            .quote {
+                float: right;
+                margin: -0.25em;
+            }
+
+            .copyright {margin: -0.25em;}
+
+        </style>
+
     </head>
 
     <body>
@@ -15,9 +25,12 @@
         </nav>
 
         <header>
-            <img src = "../images/bio.banner.png" alt = "Banner for Biography">
+            <img src = "../images/bio-banner.png" alt = "Brooke Altman Image">
+            <p><a href="../images/bio-banner.png">open image directly</a></p>
+
         </header>
 
+    <main>
         <h1>Brooke Altman's Biography</h1>
 
         <h2>Personal Info</h2>
@@ -28,29 +41,23 @@
 
         <p>
             I am glad to report that I began my professional life in marketing and social media this summer, diving into the field of digital marketing and developing my skills in a quickly changing profession. During my time as an intern, I got hands-on experience and insights into social media strategy, influencer interaction, content generation, and analytics. I am also committed to finishing my education at Syracuse University, where I am actively engaged with the course material and using what I have learned in real life. This hands-on experience, paired with my academic concentration, is helping me in building a strong foundation in Marketing that will influence my future profession.    <p> 
-        <p>
+        </p>
 
         <p>
             I love to hang out with my friends and family and watch TV and movies nightly! My favorite food is sushi, and I have a golden retriever dog named George who is my best friend! I am extremely excited to finish out my next two years of college at Syracuse and cannot wait for what's to come in the future!
-        <p> 
-    <hr>
-    &copy; 2025
+        </p> 
     <ul>
         <li>Hanging out with friends and family</li>
         <li>Playing pickleball</li>
         <li>Watching movies</li>
     </ul>
+</main>
 
-  
-      <img src="../images/BrookeAltman-image.png" alt="Brooke Altman Image">
-
-    <footer>
-        <hr>
-        <p class ="quote">In the middle of every difficulty lies opprotunity. - Albert Einstein</p>
-        <div class = "cr">&copy; 2025</div>
-    </footer>
-
-
+        <footer>
+            <hr>
+            <p class ="quote">Beauty begins the moment you decide to be yourself. - Coco Chanel</p>
+            <div class ="copyright">&copy; 2025</div>
+        </footer>
     </body>
 
 </html>
