--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -15,18 +15,27 @@
         <a href="contact.html">Contact</a>
     </nav>
     <h1>Contact</h1>
+    <div class="row">
+    <section class="col">
+    <h2>Address</h2>
     <p>Brooke Altman</p>
     <p>336 Comstock Avenue Syracuse NY, 13210</p>
+    </section>
+
+    <section class="col">
     <p>
         <a href="mailto:bsaltman@syr.edu">Brooke Altman Email</a>
     </p>
     <p>
         <a href="https://www.linkedin.com/in/brookealtman3/">My LinkedIn Profile</a>
         <a href="https://www.linkedin.com/in/brookealtman3/"><img src="../images/New-LI-Logo.png" alt="LinkedIn Logo"></a>
-    
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.9316740143313!2d-76.13335548822405!3d43.04286907101727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f30a66f5855b%3A0xefd672f89a98b5c2!2s336%20Comstock%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1757536498965!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </p>
+     </section>
+    </div>
 
+   
+<div class="row">
+    <section class="col">
 <h1>Forms</h1>
     <form action="https://formspree.io/f/xkgvlkez" method="POST">
         <label for="fname">First name: </label><br>
@@ -47,6 +56,17 @@
     <input type="submit" value="send form">
 
   </form>
+    </section>
+
+    <section class="col">
+         <iframe 
+         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.9316740143313!2d-76.13335548822405!3d43.04286907101727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f30a66f5855b%3A0xefd672f89a98b5c2!2s336%20Comstock%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1757536498965!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        
+        </iframe>
+
+
+
+    </section>
 
 
 </body>
