--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         table, th, td {border: 1px solid black;}
+        body {
+            font-family: 'Times New Roman', Times, serif;
+        }
+        h1, h2 {
+            color: mediumslateblue
+        }
+        .evenrow {
+            background-color: honeydew;
+        }
+        h1 {
+            font-size: 3em;
+        }
+        h2 {
+            font-size: 4em;
+        }
+        h1 {text-align: center;}
     </style>
  </head>
 
@@ -18,6 +34,8 @@
     <a href="contact.html">Contact</a>
     </nav>
     <h1>Tables</h1>
+    <div class="productflex">
+        <div class="producttable">
     <table>
         <caption>Skills</caption>
         <tr class="evenrow">
@@ -75,14 +93,12 @@
             <td>NYX Contour Stick</td>
             <td>$13.99 USD</td>
         </tr>
-
     </table>
-
-
-
-
-
-
+        </div>
+        <div class="skillsimage">
+            <img src="skill.png" alt="Skills Image">
+        </div>
+    </div>
 
 </body>
 
