--- a/week10notes.html
+++ b/week10notes.html
@@ -12,6 +12,9 @@
             .row1 div {
                 padding: 40px;
             }
+            img {
+                max-width: 100%;
+            }
         </style>
     </head>
     <body>
