--- a/week10notes.html
+++ b/week10notes.html
@@ -8,7 +8,9 @@
             body {font-family: Arial, Helvetica, sans-serif;}
             .row1 { 
                 padding: 80px;
-                margin-top: 40px;}
+                margin-top: 40px;
+                display: flex;
+            }
             .row1 div {
                 padding: 40px;
             }
