--- a/week10notes.html
+++ b/week10notes.html
@@ -10,6 +10,7 @@
                 padding: 80px;
                 margin-top: 40px;
                 display: flex;
+                flex-wrap: wrap;
             }
             .row1 div {
                 padding: 40px;
