--- a/week10notes.html
+++ b/week10notes.html
@@ -18,6 +18,9 @@
             img {
                 max-width: 100%;
             }
+            @media screen and (max-width: 760px;){
+                .banner {display: none;}
+            }
         </style>
     </head>
     <body>
