--- a/week10notes.html
+++ b/week10notes.html
@@ -18,7 +18,7 @@
             img {
                 max-width: 100%;
             }
-            @media screen and (max-width: 760px;){
+            @media screen and (max-width: 760px){
                 .banner {display: none;}
             }
         </style>
