--- a/week10notes.html
+++ b/week10notes.html
@@ -20,9 +20,10 @@
             }
             .bannersmall {display: none;}
 
-            
+
             @media screen and (max-width: 760px){
                 .banner {display: none;}
+                .bannersmall {display: block;}
             }
         </style>
     </head>
