--- a/participation10.html
+++ b/participation10.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <title>Title here</title>
     <style>
+        .large {display: block;}
+        .small {display: none;}
    @media screen and (max-width: 800px){
     .large {display: none;}
     .small {display: block;}
