--- a/lab10/index.html
+++ b/lab10/index.html
@@ -26,7 +26,7 @@
         </nav>
 
         <header>
-            <img src = "../images/bio-banner.png" alt = "Brooke Altman Image">
+            <img src = "../images/bio-banner.png" alt = "Brooke Altman Image" class="banner">
             <p><a href="../images/bio-banner.png">open image directly</a></p>
 
         </header>
