--- a/lab10/index.html
+++ b/lab10/index.html
@@ -14,6 +14,9 @@
 
             .copyright {margin: -0.25em;}
 
+            .banner {
+                max-width: 100%;
+            }
         </style>
 
     </head>
