--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -55,8 +55,9 @@
     </form>
     </div>
     <div class="column4">
-    <p>
-        "<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.9316740143313!2d-76.13335548822405!3d43.04286907101727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f30a66f5855b%3A0xefd672f89a98b5c2!2s336%20Comstock%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1757536498965!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"  
+    "<iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.9316740143313!2d-76.13335548822405!3d43.04286907101727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f30a66f5855b%3A0xefd672f89a98b5c2!2s336%20Comstock%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1757536498965!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>"  
     </p>
     </div>
     </div>
