--- a/lab10/index.html
+++ b/lab10/index.html
@@ -23,13 +23,13 @@
 
     <body>
         <nav>
-            <a href="index.html">Home</a> | 
-            <a href="skills.html">Skills</a> | 
+            <a href="index.html">Home</a><span> |</span> 
+            <a href="skills.html">Skills</a><span> |</span> 
             <a href="contact.html">Contact</a>
         </nav>
 
         <header>
-            <img src = "../images/bio-banner.png" alt = "Brooke Altman Image" class="banner">
+            <img src = "../images/bio-banner.png" alt = "Brooke Altman Image" class="banner"> 
             <p><a href="../images/bio-banner.png">open image directly</a></p>
 
         </header>
