--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -97,7 +97,7 @@
     </table>
         </div>
         <div class="skillsimage">
-            <img src="skill.png" alt="Skills Image">
+            <img src="../lab09/skill.png" alt="Skills Image">
         </div>
     </div>
 
