--- a/projects/project5/home.html
+++ b/projects/project5/home.html
@@ -11,9 +11,9 @@
 
     <body>
         <nav>
-            <a href="index.html">Home</a><span> |</span> 
-            <a href="products.html">Products</a><span> |</span> 
-            <a href="influencers.html">Influencers</a>
+            <a href="home.html">Home</a><span> |</span> 
+            <a href="products.html">Affordable Products</a><span> |</span> 
+            <a href="influencers.html">Influencers & Trends</a>
         </nav>
 
     <header>
