--- a/projects/project5/home.html
+++ b/projects/project5/home.html
@@ -54,6 +54,7 @@
         buy it.
       </p>
       <img src="makeup.jpg" alt="Skincare products arranged on a counter">
+      Creative Commons — Attribution-NonCommercial 4.0 (CC BY-NC 4.0)
     </article>
 
     <article>
@@ -64,6 +65,7 @@
         routine.
       </p>
       <img src="colorfulskincare.png" alt="Beauty influencer applying makeup in a mirror">
+      Creative Commons — Attribution-NoDerivatives 4.0
     </article>
 
     <article>
