--- a/projects/websitemedia/websitemedia.html
+++ b/projects/websitemedia/websitemedia.html
@@ -14,8 +14,9 @@
 <img src="../../images/colorfulskincare.png" alt="Skincare">
 <a href="https://www.tiktok.com/t/ZP8Ad825f/">Toni Bravo's Five Finger Favorites</a>
 <a href="https://www.tiktok.com/t/ZP8AewhPk/">Acquired Style Night in Her Life</a>
-
-
+<img src="../project5/acquiredstyle.jpg" alt="Acquiredstyle">
+<img src="../project5/tonibravo.jpg" alt="Toni Bravo">
+<img src="../project5/Olivia Jade.png" alt="Olivia Jade">
 
 
 
