--- a/projects/project5/products.html
+++ b/projects/project5/products.html
@@ -30,6 +30,8 @@
 
       <section>
         <h3>Cleansers:</h3>
+        <img src="../project5/cleanser.jpg" alt="Cleanser">
+        Free Stock Photo (Pexels License)
         <p>
           A healthy cleanser does not need to have a high cost. These gentle but effective options
           clean your skin and leave it feeling fresh, at prices that don’t hurt. 
@@ -57,6 +59,8 @@
 
       <section>
         <h3>Moisturizers:</h3>
+        <img src="../project5/moisturizer.jpg" alt="Moisturizer">
+         Free Stock Photo (Pexels License)
         <p>
           Oily, dry, or combination skin should all be taken care of. These moisturizers help nourish
           and hydrate your skin while letting you keep your money. 
@@ -83,6 +87,8 @@
 
       <section>
         <h3>Serums and Treatments:</h3>
+        <img src="../project5/serum.jpg" alt="Serums">
+        Free Stock Photo (FreeRange License)
         <p>
           Reliable affordable options that help keep your skin glowing, reduce fine lines, and give
           you brightness without blowing your budget. 
