--- a/projects/websitemedia/websitemedia.html
+++ b/projects/websitemedia/websitemedia.html
@@ -17,8 +17,10 @@
 <img src="../project5/acquiredstyle.jpg" alt="Acquiredstyle">
 <img src="../project5/tonibravo.jpg" alt="Toni Bravo">
 <img src="../project5/Olivia Jade.png" alt="Olivia Jade">
-
-
+<img src="../project5/Hailey Bieber.png" alt="Hailey Bieber">
+<img src="../project5/cleanser.jpg" alt="Cleanser">
+<img src="../project5/moisturizer.jpg" alt="Moisturizer">
+<img src="../project5/serum.jpg" alt="Serums">
 
 
 
