--- a/projects/project5/home.html
+++ b/projects/project5/home.html
@@ -6,13 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beauty on a Budget</title>
     </head>
-
     <body>
+
+      <header>
         <nav>
             <a href="home.html">Home</a><span> |</span> 
             <a href="products.html">Affordable Products</a><span> |</span> 
             <a href="influencers.html">Influencers & Trends</a>
         </nav>
+      </header>
 
 
 
