--- a/participation11.html
+++ b/participation11.html
@@ -13,8 +13,7 @@
             }
         </script>
     <body>
-        <script>alert('I am sending an alert!');</script>
-        <h1 onmouseover="SecondBlock();">Classic First JavaScript Program</h1>
+        <h1 onmouseover="SecondBlock();">Roll over for a message</h1>
         <p> Loreum Ispum </p>
         <p> Loreum Ispum <a onmouseover="rollover();"href="#" onclick="clicky();">veinna</a></p>
     </body>
