--- a/projects/project5/index.html
+++ b/projects/project5/index.html
@@ -10,7 +10,7 @@
 
       <header>
         <nav>
-            <a href="home.html">Home</a><span> |</span> 
+            <a href="index.html">Home</a><span> |</span> 
             <a href="products.html">Affordable Products</a><span> |</span> 
             <a href="influencers.html">Influencers & Trends</a>
         </nav>
