--- a/projects/project5/influencers.html
+++ b/projects/project5/influencers.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Beauty on a Budget</h1>
       <nav>
-            <a href="home.html">Home</a><span> |</span> 
+            <a href="index.html">Home</a><span> |</span> 
             <a href="products.html">Affordable Products</a><span> |</span> 
             <a href="influencers.html">Influencers & Trends</a>
         </nav>
