--- a/week12notes.html
+++ b/week12notes.html
@@ -17,6 +17,11 @@
 <body>
     <p id="p1" onclick="bigly();">Content goes here</p>
     <p id="p2">Paragraph 2</p>
+
+        <h1>My JavaScript Quiz</h1>
+    <p onclick="wrongAnswer();" id="wrong">True</p>
+    <p onclick="rightAnswer();" id="correct">False</p>
+
 </body>
 
 
