--- a/week12notes.html
+++ b/week12notes.html
@@ -10,6 +10,10 @@
         function bigly () {
             document.getElementById("p1").innerHTML="New Content"
         }
+
+        function wrongAnswer () {
+            document.getElementById("wrong").innerHTML="<span style='color:red;'>True is wrong answer!</span>"
+        }
      </script>
 
 </head>
