--- a/week12notes.html
+++ b/week12notes.html
@@ -23,8 +23,11 @@
     <p id="p2">Paragraph 2</p>
 
         <h1>My JavaScript Quiz</h1>
+    <p>Java and JavaScript are the same thing</p>
     <p onclick="wrongAnswer();" id="wrong">True</p>
     <p onclick="rightAnswer();" id="correct">False</p>
+
+    <img src="images/serum.png">
 
 </body>
 
