--- a/week12notes.html
+++ b/week12notes.html
@@ -16,7 +16,7 @@
         }
 
         function changeImage () {
-            document.getElementById("teamsimage").setAttribute("src", "makeup.jpg");
+            document.getElementById("teamsimage").setAttribute("src", "./ist263/images/serum.png");
         }
      </script>
 
