--- a/week12notes.html
+++ b/week12notes.html
@@ -30,7 +30,7 @@
     <p id="p1" onclick="bigly();">Content goes here</p>
     <p id="p2">Paragraph 2</p>
 
-        <h1>My JavaScript Quiz</h1>
+        <h1 onmouseover="bluey();">My JavaScript Quiz</h1>
     <p>Java and JavaScript are the same thing</p>
     <p onclick="wrongAnswer();" id="wrong">True</p>
     <p onclick="rightAnswer();" id="correct">False</p>
