--- a/projects/project6/index.html
+++ b/projects/project6/index.html
@@ -35,9 +35,7 @@
       In our society, looking and feeling your best does not and should not come at a high
       price. We’re here to showcase the best products without breaking your bank,
       proving that great beauty doesn’t have to have a crazy price tag. Explore trending
-      beauty products that are affordable for you.
-    </p>
-    <p>
+      beauty products that are affordable for you.<br>
       Our team is constantly reviewing new and trending items, making sure each
       product meets high standards of affordability and effectiveness.
     </p>
