--- a/projects/project6/influencers.html
+++ b/projects/project6/influencers.html
@@ -37,8 +37,10 @@
 
       <article>
         <h3>Acquired Style (@acquiredstyle)</h3>
+
         <img src="../project5/acquiredstyle.jpg" alt="Acquiredstyle">
         Brigette Pheloung (Acquired Style) – Instagram profile
+
         <p>
           Acquired Style has taken the world by storm as a beauty, health, and wellness influencer
           known for her engaging videos and fun lifestyle. Her page brings an exciting mix of beauty,
@@ -47,21 +49,23 @@
 
         <h4>Her Favs:</h4>
 
-        <p>
-          <strong>Medicube PDRN Pink Collagen Gel Mask:</strong>
+        <ul>
+          <li>
+          <strong>Medicube PDRN Pink Collagen Gel Mask:</strong><br>
           You can see her wearing these in almost every “day in my life” video.
           She says they leave her skin refreshed and glowing so she’s ready to take on the day. 
           <br>
           <a href="https://www.ulta.com/p/pdrn-pink-collagen-gel-mask-pimprod2053540?sku=2645359&cmpid=PS_Non!google!Product_Listing_Ads&utm_source=google&utm_medium=paidsearch&cagpspn=pla&CATCI=&CAAGID=&CAWELAID=330000200003341647&gad_source=1&gad_campaignid=22865742698&gbraid=0AAAAAD9rLH6Dcq0ixVzIJ3cLwvLn794ei&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ0TZwg5slf6zzy1udR89Sy13MTwtiVHwhWiO15vw701t3FmB9nhL-MaAs4FEALw_wcB">Medicube PDRN Pink Collagen Gel Mask</a>
-        </p>
+          </li>
 
-        <p>
+        <li>
           <strong>Wonderskin Wonder Blading Lip Stain Peel Off Masque:</strong>
           Leaves a beautiful, long-lasting color on the lips that stays all day.
           She uses it constantly and gets comments asking what it is in almost every video.
           <br>
           <a href="https://wonderskin.com/products/wonderblading-for-lips-long-lasting-waterproof-lip-stain?variant=39597804290245">Wonderskin Wonder Blading Lip Stain Peel Off Masquer</a>
-        </p>
+        </li>
+        </ul>
 
         <p>
           Watch her routines:
@@ -82,23 +86,23 @@
 
         <h4>Her Favs:</h4>
 
-        <p>
+        <ul>
+          <li>
           <strong>Milk Hydro Grip Eye Primer:</strong>
           She applies this on her smile lines in her makeup routine as a hack to keep makeup smooth
           and in place. She says she recently started using it and will never go back.
           <br>
          <a href="https://milkmakeup.com/products/eye-primer?variant=41249185431737&country=US&currency=USD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&isource=google&imedium=search&icampaignid=18160557524&iadgroupid=&iadid=&gad_source=1&gad_campaignid=18160624925&gbraid=0AAAAADenHSiOqoxjFZclWWD5EKJVBEP4j&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ36R7ZdRUdr3aQRxVoJ-ahlJXQ7sDSxaffqq_1aFMFVrhBCxuurcfMaArKQEALw_wcB">Milk Hydro Grip Eye Primer</a>
-        
-        </p>
+          </li>
 
-        <p>
+        <li>
           <strong>Saie Slip Tint Undetectable Baked Setting Powder:</strong>
           She recommends pressed setting powder to get a natural and flawless finish with no creasing.
           She says this gives her a smooth look. 
           <br>
           <a href="https://www.sephora.com/product/saie-slip-tint-undetectable-baked-setting-powder-P517161?country_switch=us&lang=en&skuId=2893006&om_mmc=ppc-GG_17791296877___2893014__9005169_c&gclsrc=aw.ds&gad_source=1&gad_campaignid=17798721731&gbraid=0AAAAADnIXb1JSOdeiUatI4JnE2Afh4Om2&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ2Tzu-xvTTGFWBUmepG4tGGP8QAv0DeBiMfQIxqmuIoMve8vtEbyv4aAlnSEALw_wcB">Saie Slip Tint Undetectable Baked Setting Powder</a>
-         
-        </p>
+        </li>
+        </ul>
 
         <p>
           Watch her talk about “5 Finger Favorites”:
@@ -120,7 +124,8 @@
 
         <h4>Her Favs:</h4>
 
-        <p>
+        <ul>
+          <li>
           <strong>Kosas Soulgazer Mascara:</strong>
           She recommends this lightweight, buildable mascara and says she can't leave the house
           without it. She loves that it's smudge-proof and very long-lasting — “the proof is in the
@@ -129,9 +134,9 @@
           <a href="https://kosas.com/products/soulgazer?currency=USD&variant=43444217086009&utm_source=google&utm_medium=cpc&utm_campaign=Google%20Shopping&stkn=ddc9db422260&/utm_source=google&utm_medium=shopping&utm_source=google&utm_medium=paid&utm_campaign=19923869890&utm_content=144573374061&utm_term=&gadid=653145831753&gad_source=1&gad_campaignid=19923869890&gbraid=0AAAAADeui77iYiuHnLyK43ZqsEX7Pa9X2&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ0epAFZCaaxuJ2Aq4BnXlpS-Ve8pyNV1BhP65UsOetP4u7ihb2yNCwaArBmEALw_wcB">Kosas Soulgazer Mascara</a>
             View Kosas Soulgazer Mascara
           </a>
-        </p>
+        </li>
 
-        <p>
+        <li>
           <strong>NYX Lip IV Hydrating Gloss Stain:</strong>
           She says it gives a light stain that lasts all day with no reapplication, but you can also wear
           it like a normal gloss. When the gloss wears off, the color is still there. “I’m obsessed with
@@ -139,7 +144,8 @@
           <br>
          <a href="https://www.ulta.com/p/lip-iv-hydrating-gloss-stain-pimprod2049052?sku=2634226&cmpid=PS_Non!google!Product_Listing_Ads&utm_source=google&utm_medium=paidsearch&cagpspn=pla&CATCI=&CAAGID=&CAWELAID=330000200003289679&gad_source=1&gad_campaignid=19046320253&gbraid=0AAAAAD9rLH5xIILmNc_DYeTFQOtntxpaP&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ1xnGWOBJLDV7oHhUzxHIMN9h38hV_hzANwHdMBfzaRCVUEEdkf-9AaAgqTEALw_wcB">NYX Lip IV Hydrating Gloss Stain</a>
           </a>
-        </p>
+        </li>
+        </ul>
       </article>
 
       <article>
@@ -154,23 +160,25 @@
 
         <h4>Her Favs:</h4>
 
-        <p>
+        <ul>
+          <li>
           <strong>Rhode Peptide Glazing Fluid:</strong>
           She uses her own product constantly — this is a lightweight, hydrating layer that gives
           glow and bounce to the skin. People use it alone or under makeup. She swears by it.
           <br>
           <a href="https://www.rhodeskin.com/products/peptide-glazing-fluid?srsltid=AfmBOor4p8ixgvMkZOFhuZ-w-5TKWDSTMM_Bp3Rq8GbEpBSgKdxvEXJt">Rhode Peptide Glazing Fluid</a>
           </a>
-        </p>
+        </li>
 
-        <p>
+        <li>
           <strong>Rhode Peptide Lip Treatment:</strong>
           One of the most popular lip products right now. Hydrating, glossy, smells good, and she is
           literally never seen without it — sometimes it’s even clipped to her phone. 
           <br>
           <a href="https://www.rhodeskin.com/products/peptide-lip-treatment-strawberry-glaze">Rhode Peptide Lip Treatment</a>
           </a>
-        </p>
+        </li>
+        </ul>
       </article>
     </div>
 
