--- a/projects/project6/index.html
+++ b/projects/project6/index.html
@@ -56,6 +56,7 @@
       </p>
       <img src="makeup.jpg" alt="Skincare products arranged on a counter">
       Creative Commons — Attribution-NonCommercial 4.0 (CC BY-NC 4.0)
+    </div>
     </article>
 
     <article>
@@ -67,6 +68,7 @@
       </p>
       <img src="colorfulskincare.png" alt="Beauty influencer applying makeup in a mirror">
       Creative Commons — Attribution-NoDerivatives 4.0
+    </div>
     </article>
 
     <article>
