--- a/projects/project6/index.html
+++ b/projects/project6/index.html
@@ -10,6 +10,7 @@
     <body>
 
       <header>
+         <h1>Beauty on a Budget</h1>
         <nav>
             <a href="index.html">Home</a><span> |</span> 
             <a href="products.html">Affordable Products</a><span> |</span> 
