--- a/projects/project6/influencers.html
+++ b/projects/project6/influencers.html
@@ -38,7 +38,7 @@
       <article>
         <h3>Acquired Style (@acquiredstyle)</h3>
 
-        <img src="../project5/acquiredstyle.jpg" alt="Acquiredstyle">
+        <img src="../project5/acquiredstyle.jpg" class="influencer-img"  alt="Acquiredstyle">
         Brigette Pheloung (Acquired Style) – Instagram profile
 
         <p>
@@ -76,7 +76,7 @@
 
       <article>
         <h3>Toni Bravo (@bonitravo)</h3>
-        <img src="../project5/tonibravo.jpg" alt="Toni Bravo">
+        <img src="../project5/tonibravo.jpg" class="influencer-img" alt="Toni Bravo">
         Toni Bravo – Instagram profile
         <p>
           A fast-growing beauty influencer known for her “5 Finger Favorites,” where she pretends
@@ -114,7 +114,7 @@
 
       <article>
         <h3>Olivia Jade</h3>
-        <img src="../project5/Olivia Jade.png" alt="Olivia Jade">
+        <img src="../project5/Olivia Jade.png" class="influencer-img" alt="Olivia Jade">
         Olivia Jade – Instagram profile
         <p>
           Olivia Jade is known for her clean beauty and lifestyle content.
@@ -150,7 +150,7 @@
 
       <article>
         <h3>Hailey Bieber</h3>
-        <img src="../project5/Hailey Bieber.png" alt="Hailey Bieber">
+        <img src="../project5/Hailey Bieber.png" class="influencer-img" alt="Hailey Bieber">
         Hailey Bieber - Instagram Profile 
         <p>
           Hailey Bieber is an iconic model and beauty figure known for her natural “glazed” skin
