--- a/projects/project6/influencers.html
+++ b/projects/project6/influencers.html
@@ -113,7 +113,7 @@
       </article>
 
       <article>
-        <h3>Olivia Jade</h3>
+        <h3>Olivia Jade (@oliviajade)</h3>
         <img src="../project5/Olivia Jade.png" class="influencer-img" alt="Olivia Jade">
         Olivia Jade – Instagram profile
         <p>
@@ -149,7 +149,7 @@
       </article>
 
       <article>
-        <h3>Hailey Bieber</h3>
+        <h3>Hailey Bieber (@haileybeiber)</h3>
         <img src="../project5/Hailey Bieber.png" class="influencer-img" alt="Hailey Bieber">
         Hailey Bieber - Instagram Profile 
         <p>
