--- a/projects/project6/index.html
+++ b/projects/project6/index.html
@@ -56,8 +56,7 @@
         buy it.
       </p>
       <img src="makeup.jpg" alt="Skincare products arranged on a counter">
-      Creative Commons — Attribution-NonCommercial 4.0 (CC BY-NC 4.0)
-    </div>
+      <p>Creative Commons — Attribution-NonCommercial 4.0 (CC BY-NC 4.0)</p>
     </article>
 
     <article>
@@ -68,8 +67,7 @@
         routine.
       </p>
       <img src="colorfulskincare.png" alt="Beauty influencer applying makeup in a mirror">
-      Creative Commons — Attribution-NoDerivatives 4.0
-    </div>
+      <p>Creative Commons — Attribution-NoDerivatives 4.0</p>
     </article>
 
     <article>
