--- a/lab13/index.html
+++ b/lab13/index.html
@@ -30,7 +30,7 @@
 
         <header>
             <img src = "../images/bio-banner.png" alt = "Brooke Altman Image" class="banner"> 
-            <p><a href="../images/bio-banner.png">open image directly</a></p>
+            <p><a href="../images/bio-banner.png"></a></p>
 
         </header>
 
