--- a/lab13/index.html
+++ b/lab13/index.html
@@ -19,6 +19,9 @@
             }
         </style>
         <a href="#main" class="skip">Skip to main content</a>
+        <main id="main">
+  
+
     </head>
 
     <body>
