--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -27,6 +27,7 @@
         h1 {text-align: center;}
     </style>
     <a href="#main" class="skip">Skip to main content</a>
+        <main id="main">
  </head>
 
 <body>
