--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -8,6 +8,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
     <a href="#main" class="skip">Skip to main content</a>
+        <main id="main">
  </head>
 
 <body>
