--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -45,13 +45,17 @@
         <textarea id="comment" name="comments">Brooke Altman</textarea>
 
         <p>Please select your age.</p>
+        <fieldset>
+            <legend>Age range</legend>
+
         <input type="radio" id="age1" name="age" value="30">
         <label for="age1">0-30</label>
          <input type="radio" id="age2" name="age" value="60">
         <label for="age2">31-60</label>
          <input type="radio" id="age3" name="age" value="100">
         <label for="age3">61-100</label>
-
+        
+        </fieldset>
     <br><br>
     <input type="submit" value="send form">
     </form>
