--- a/week14modals.html
+++ b/week14modals.html
@@ -13,7 +13,6 @@
             padding: 5px;
         }
         /* write CSS to position our subscribe form and hide it when the page loads here */
-
         #modal {
             position: absolute;
             width: 300px;
@@ -30,7 +29,7 @@
 </head>
 <body data-new-gr-c-s-check-loaded="14.1264.0" data-gr-ext-installed="">
     <div class="container">
-        <img src="./Modal_files/cupcakes.jpg">
+        <img src="./week14modal_files/cupcakes.jpg">
         <h1>Desserts</h1>
         <p>Tootsie roll icing dessert oat cake lollipop jelly apple pie muffin. Jelly jelly-o bear claw topping muffin pudding oat cake. Carrot cake candy pie jujubes muffin tootsie roll. Brownie topping apple pie cupcake danish chocolate cotton candy gingerbread.</p>
         
@@ -43,7 +42,7 @@
         <p><a class="button">Subscribe to Our Newsletter</a></p>
 
         <!-- make a subscribe form here -->
-         <div id="modal">
+          <div id="modal">
                <p class="close">X</p>
             <form>
                 <label for="name">Name</label><br>
@@ -55,5 +54,25 @@
          </div>
 
     </div>
-</body>
-</html>
+
+</body><grammarly-desktop-integration data-grammarly-shadow-root="true"><template shadowrootmode="open"><style>
+      div.grammarly-desktop-integration {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select:none;
+        user-select:none;
+      }
+
+      div.grammarly-desktop-integration:before {
+        content: attr(data-content);
+      }
+    </style><div aria-label="grammarly-integration" role="group" tabindex="-1" class="grammarly-desktop-integration" data-content="{&quot;mode&quot;:&quot;full&quot;,&quot;isActive&quot;:true,&quot;isUserDisabled&quot;:false}"></div></template></grammarly-desktop-integration></html>
