--- a/week14modals.html
+++ b/week14modals.html
@@ -22,6 +22,7 @@
             padding: 1em;
             border: 1px black solid;
         }
+        .close {text-align: right;}
     </style>
     <script>
         /* add code to open and close our subscribe form */
