--- a/week14modals.html
+++ b/week14modals.html
@@ -30,7 +30,7 @@
 </head>
 <body data-new-gr-c-s-check-loaded="14.1264.0" data-gr-ext-installed="">
     <div class="container">
-        <img src="./week14modal_files/cupcakes.jpg">
+        <img src="https://peopel-su.github.io/ist263/images/cupcakes.jpg">
         <h1>Desserts</h1>
         <p>Tootsie roll icing dessert oat cake lollipop jelly apple pie muffin. Jelly jelly-o bear claw topping muffin pudding oat cake. Carrot cake candy pie jujubes muffin tootsie roll. Brownie topping apple pie cupcake danish chocolate cotton candy gingerbread.</p>
         
