--- a/week14modal.html
+++ b/week14modal.html
@@ -53,7 +53,7 @@
 
         <!-- make a subscribe form here -->
           <div id="modal">
-               <p class="close">X</p>
+               <p class="close" onclick="closeModal();">X</p>
             <form>
                 <label for="name">Name</label><br>
                 <input type="text" id="name" name="name"><br>
