--- a/week14modal.html
+++ b/week14modal.html
@@ -21,6 +21,7 @@
             background-color: burlywood;
             padding: 1em;
             border: 1px black solid;
+            display: none;
         }
         #close {
             text-align: right;
@@ -53,7 +54,7 @@
 
         <!-- make a subscribe form here -->
           <div id="modal">
-               <p class="close" onclick="closeModal();">X</p>
+               <p id="close" onclick="closeModal();">X</p>
             <form>
                 <label for="name">Name</label><br>
                 <input type="text" id="name" name="name"><br>
