--- a/projects/project6/index.html
+++ b/projects/project6/index.html
@@ -25,7 +25,7 @@
     <p>
       Whether you’re new to the beauty world or an enthusiast, this site will give you
       everything you need to enhance your everyday beauty routine. From skincare tips
-      to budget-friendly beauty products, we’re here to come along the ride of beauty
+      to budget-friendly beauty products, we’re here to come along on the ride of beauty
       and skincare right by your side.
     </p>
   </div>
@@ -73,9 +73,7 @@
     <article>
       <h3>Trends and Tips</h3>
       <p>
-        What’s blowing up right now in beauty, skincare, and wellness: minimal looks,
-        glowing skin, lip stains that last all day, and products influencers refuse to stop
-        talking about.
+        The hottest trends in beauty, skincare, and wellness: minimal looks, glowing skin, long-lasting lip stains, and influencer-endorsed products.
       </p>
     </article>
     
