--- a/projects/project6/products.html
+++ b/projects/project6/products.html
@@ -37,7 +37,7 @@
         <img src="../project5/cleanser.jpg" alt="Cleanser">
         Free Stock Photo (Pexels License)
         <p>
-          A healthy cleanser does not need to have a high cost. These gentle but effective options
+          A healthy cleanser does not need to be expensive. These gentle but effective options
           clean your skin and leave it feeling fresh, at prices that don’t hurt. 
         </p>
       </article>
@@ -45,16 +45,15 @@
         <ul>
           <li>
           <strong>CeraVe Hydrating Cleanser</strong><br>
-            A gentle, non-foaming cleanser that will clean your skin and give that boost of hydration.
-            This is perfect for dry and sensitive skin and is only around $15.99 USD. 
+            A gentle, non-foaming cleanser that cleanses your skin and delivers a hydration boost.
+            This is perfect for dry, sensitive skin and costs only around $15.99 USD. 
           <br>
           <a href="https://www.cerave.com/skincare/cleansers/hydrating-facial-cleanser">CeraVe Hydrating Cleanser</a>
         </li>
 
         <li>
           <strong>Neutrogena Fresh Foaming Cleanser</strong><br>
-            A classic, affordable foaming cleanser that works for makeup removal while also
-            actually cleaning your skin. This one is around $7.99 USD. 
+            An affordable foaming cleanser that thoroughly removes makeup and cleanses skin for only $7.99 USD. 
           <br>
            <a href="https://www.target.com/cart">Neutrogena Fresh Foaming Cleanser</a>
         </li>
@@ -101,7 +100,7 @@
         <img src="../project5/serum.jpg" alt="Serums">
         Free Stock Photo (FreeRange License)
         <p>
-          Reliable affordable options that help keep your skin glowing, reduce fine lines, and give
+          Reliable, affordable options that help keep your skin glowing, reduce fine lines, and give
           you brightness without blowing your budget. 
         </p>
         </article>
@@ -125,7 +124,7 @@
 
         <li>
           <strong>Medicube PDRN Pink Collagen Gel Mask</strong>
-            These gel masks boost elasticity and firmness using PDRN and leave the skin looking
+            These gel masks boost elasticity and firmness with PDRN, leaving the skin looking
             glowy and bouncy. They’re around $19.90 USD. 
           <br>
            <a href="https://www.ulta.com/p/pdrn-pink-collagen-gel-mask-pimprod2053540?sku=2645359&cmpid=PS_Non!google!Product_Listing_Ads&utm_source=google&utm_medium=paidsearch&cagpspn=pla&CATCI=&CAAGID=&CAWELAID=330000200003341647&gad_source=1&gad_campaignid=22865742698&gbraid=0AAAAAD9rLH6Dcq0ixVzIJ3cLwvLn794ei&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ0TZwg5slf6zzy1udR89Sy13MTwtiVHwhWiO15vw701t3FmB9nhL-MaAs4FEALw_wcB">Medicube PDRN Pink Collagen Gel Mask</a>
@@ -138,7 +137,7 @@
     <div>
       <h2>Why We Chose These</h2>
       <p>
-        These are products that are frequently recommended because of their affordability and
+        These products are frequently recommended for their affordability and
         effectiveness. All of them are meant to keep your skin hydrated, smooth, and bright —
         without paying luxury prices. <br>
         We believe beauty should be accessible. You deserve products that work.
