--- a/projects/project6/influencers.html
+++ b/projects/project6/influencers.html
@@ -53,7 +53,7 @@
           <li>
           <strong>Medicube PDRN Pink Collagen Gel Mask:</strong><br>
           You can see her wearing these in almost every “day in my life” video.
-          She says they leave her skin refreshed and glowing so she’s ready to take on the day. 
+          She says they leave her skin refreshed and glowing, so she’s ready to take on the day. 
           <br>
           <a href="https://www.ulta.com/p/pdrn-pink-collagen-gel-mask-pimprod2053540?sku=2645359&cmpid=PS_Non!google!Product_Listing_Ads&utm_source=google&utm_medium=paidsearch&cagpspn=pla&CATCI=&CAAGID=&CAWELAID=330000200003341647&gad_source=1&gad_campaignid=22865742698&gbraid=0AAAAAD9rLH6Dcq0ixVzIJ3cLwvLn794ei&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ0TZwg5slf6zzy1udR89Sy13MTwtiVHwhWiO15vw701t3FmB9nhL-MaAs4FEALw_wcB">Medicube PDRN Pink Collagen Gel Mask</a>
           </li>
@@ -89,7 +89,7 @@
         <ul>
           <li>
           <strong>Milk Hydro Grip Eye Primer:</strong>
-          She applies this on her smile lines in her makeup routine as a hack to keep makeup smooth
+          She applies this to her smile lines in her makeup routine as a hack to keep makeup smooth
           and in place. She says she recently started using it and will never go back.
           <br>
          <a href="https://milkmakeup.com/products/eye-primer?variant=41249185431737&country=US&currency=USD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&isource=google&imedium=search&icampaignid=18160557524&iadgroupid=&iadid=&gad_source=1&gad_campaignid=18160624925&gbraid=0AAAAADenHSiOqoxjFZclWWD5EKJVBEP4j&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ36R7ZdRUdr3aQRxVoJ-ahlJXQ7sDSxaffqq_1aFMFVrhBCxuurcfMaArKQEALw_wcB">Milk Hydro Grip Eye Primer</a>
@@ -97,7 +97,7 @@
 
         <li>
           <strong>Saie Slip Tint Undetectable Baked Setting Powder:</strong>
-          She recommends pressed setting powder to get a natural and flawless finish with no creasing.
+          She recommends a pressed setting powder for a natural, flawless finish with no creasing.
           She says this gives her a smooth look. 
           <br>
           <a href="https://www.sephora.com/product/saie-slip-tint-undetectable-baked-setting-powder-P517161?country_switch=us&lang=en&skuId=2893006&om_mmc=ppc-GG_17791296877___2893014__9005169_c&gclsrc=aw.ds&gad_source=1&gad_campaignid=17798721731&gbraid=0AAAAADnIXb1JSOdeiUatI4JnE2Afh4Om2&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ2Tzu-xvTTGFWBUmepG4tGGP8QAv0DeBiMfQIxqmuIoMve8vtEbyv4aAlnSEALw_wcB">Saie Slip Tint Undetectable Baked Setting Powder</a>
@@ -139,8 +139,8 @@
         <li>
           <strong>NYX Lip IV Hydrating Gloss Stain:</strong>
           She says it gives a light stain that lasts all day with no reapplication, but you can also wear
-          it like a normal gloss. When the gloss wears off, the color is still there. “I’m obsessed with
-          this and I cannot stop using it!” 
+          it like a normal gloss. When the gloss wears off, the color remains. “I’m obsessed with
+          this, and I cannot stop using it!” 
           <br>
          <a href="https://www.ulta.com/p/lip-iv-hydrating-gloss-stain-pimprod2049052?sku=2634226&cmpid=PS_Non!google!Product_Listing_Ads&utm_source=google&utm_medium=paidsearch&cagpspn=pla&CATCI=&CAAGID=&CAWELAID=330000200003289679&gad_source=1&gad_campaignid=19046320253&gbraid=0AAAAAD9rLH5xIILmNc_DYeTFQOtntxpaP&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ1xnGWOBJLDV7oHhUzxHIMN9h38hV_hzANwHdMBfzaRCVUEEdkf-9AaAgqTEALw_wcB">NYX Lip IV Hydrating Gloss Stain</a>
           </a>
@@ -153,8 +153,8 @@
         <img src="../project5/Hailey Bieber.png" class="influencer-img" alt="Hailey Bieber">
         Hailey Bieber - Instagram Profile 
         <p>
-          Hailey Bieber is an iconic model and beauty figure known for her natural “glazed” skin
-          look. She created her skincare line Rhode and is known for her minimalist approach:
+          Hailey Bieber is an iconic model and beauty figure known for her natural, “glazed” skin
+          look. She created her skincare line, Rhode, and is known for her minimalist approach:
           clean, glowy, simple. She has a massive influence on current trends.
         </p>
 
