--- a/projects/project7/index.html
+++ b/projects/project7/index.html
@@ -16,8 +16,8 @@
       <header>
          <h1>Beauty on a Budget</h1>
         <nav>
-            <a href="index.html">Home</a><span> |</span> 
-            <a href="products.html">Affordable Products</a><span> |</span> 
+            <a href="index.html">Home</a><span class="sep"> |</span> 
+            <a href="products.html">Affordable Products</a><span class="sep"> |</span> 
             <a href="influencers.html">Influencers & Trends</a>
         </nav>
       </header>
