--- a/projects/project7/influencers.html
+++ b/projects/project7/influencers.html
@@ -80,7 +80,7 @@
 
       <article>
         <h3>Toni Bravo (@bonitravo)</h3>
-        <img src="../project5/tonibravo.jpg" class="influencer-img" alt="Toni Bravo">
+        <img src="../project5/tonibravo.jpg" class="influencer-img" alt="Toni-Bravo">
         Toni Bravo – Instagram profile
         <p>
           A fast-growing beauty influencer known for her “5 Finger Favorites,” where she pretends
@@ -118,7 +118,7 @@
 
       <article>
         <h3>Olivia Jade (@oliviajade)</h3>
-        <img src="../project5/Olivia Jade.png" class="influencer-img" alt="Olivia Jade">
+        <img src="../project5/Olivia Jade.png" class="influencer-img" alt="Olivia-Jade">
         Olivia Jade – Instagram profile
         <p>
           Olivia Jade is known for her clean beauty and lifestyle content.
@@ -137,24 +137,22 @@
           <br>
           <a href="https://kosas.com/products/soulgazer?currency=USD&variant=43444217086009&utm_source=google&utm_medium=cpc&utm_campaign=Google%20Shopping&stkn=ddc9db422260&/utm_source=google&utm_medium=shopping&utm_source=google&utm_medium=paid&utm_campaign=19923869890&utm_content=144573374061&utm_term=&gadid=653145831753&gad_source=1&gad_campaignid=19923869890&gbraid=0AAAAADeui77iYiuHnLyK43ZqsEX7Pa9X2&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ0epAFZCaaxuJ2Aq4BnXlpS-Ve8pyNV1BhP65UsOetP4u7ihb2yNCwaArBmEALw_wcB">Kosas Soulgazer Mascara</a>
             View Kosas Soulgazer Mascara
-          </a>
         </li>
 
         <li>
           <strong>NYX Lip IV Hydrating Gloss Stain:</strong>
           She says it gives a light stain that lasts all day with no reapplication, but you can also wear
-          it like a normal gloss. When the gloss wears off, the color remains. “I’m obsessed with
+          it like a normal gloss. When the gloss wears off, the color remains. “Im obsessed with
           this, and I cannot stop using it!” 
           <br>
          <a href="https://www.ulta.com/p/lip-iv-hydrating-gloss-stain-pimprod2049052?sku=2634226&cmpid=PS_Non!google!Product_Listing_Ads&utm_source=google&utm_medium=paidsearch&cagpspn=pla&CATCI=&CAAGID=&CAWELAID=330000200003289679&gad_source=1&gad_campaignid=19046320253&gbraid=0AAAAAD9rLH5xIILmNc_DYeTFQOtntxpaP&gclid=Cj0KCQjw8p7GBhCjARIsAEhghZ1xnGWOBJLDV7oHhUzxHIMN9h38hV_hzANwHdMBfzaRCVUEEdkf-9AaAgqTEALw_wcB">NYX Lip IV Hydrating Gloss Stain</a>
-          </a>
         </li>
         </ul>
       </article>
 
       <article>
         <h3>Hailey Bieber (@haileybeiber)</h3>
-        <img src="../project5/Hailey Bieber.png" class="influencer-img" alt="Hailey Bieber">
+        <img src="../project5/Hailey Bieber.png" class="influencer-img" alt="Hailey-Bieber">
         Hailey Bieber - Instagram Profile 
         <p>
           Hailey Bieber is an iconic model and beauty figure known for her natural, “glazed” skin
@@ -177,25 +175,26 @@
         <li>
           <strong>Rhode Peptide Lip Treatment:</strong>
           One of the most popular lip products right now. Hydrating, glossy, smells good, and she is
-          literally never seen without it — sometimes it’s even clipped to her phone. 
+          literally never seen without it — sometimes its even clipped to her phone. 
           <br>
           <a href="https://www.rhodeskin.com/products/peptide-lip-treatment-strawberry-glaze">Rhode Peptide Lip Treatment</a>
           </a>
         </li>
         </ul>
-      </article>
+    </article>
     </div>
 
-    <div>
+    <section>
       <h2>Trending Right Now</h2>
       <p>
-        Everything trending right now is simple, clean, and minimalistic — glowy skin, light coverage,
-        lip stains that last all day, and soft makeup instead of heavy full glam.
-        You can see these trends all over our site through product picks and influencer routines. 
+        Everything trending right now is simple, clean, and minimalistic glowy skin,
+        light coverage, lip stains that last all day, and soft makeup instead of heavy full glam.
+        You can see these trends all over our site through product picks and influencer routines.
       </p>
-    </divn>
+    </section>
 
-  </main>
+</main>
+
 
   <footer>
     <p>&copy; 2025 Brooke Altman. All rights reserved.</p>
